<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F303CB"
        android:fontFamily="casual"
        android:text="@string/search_query"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/enter_a_keyword_or_leave_blank"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="#000499" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00E5FF"
        android:fontFamily="casual"
        android:onClick="buttonclicked"
        android:text="@string/button"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:fontFamily="casual"
        android:text="@string/headlines"
        android:textAlignment="center"
        android:textColor="#1800EC"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="59dp"
        android:layout_height="27dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#FFFFFF"
        android:fontFamily="casual"
        android:text="@string/your_statement"
        android:textAlignment="center"
        android:textColor="#00B0FF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8BFF0000"
        android:fontFamily="casual"
        android:text="@string/sentiment_analysis"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ironyText"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/irony"
        android:textAlignment="center"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/confidenceText"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/confidence"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHighlight="#B91313" />

    <TextView
        android:id="@+id/scoreTag"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/score_tag"
        android:textAlignment="center"
        android:textColor="#000000" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="177dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:background="#25F800"
                android:fontFamily="casual"
                android:text="@string/sort_by"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="276dp"
                android:layout_height="match_parent"
                android:background="#FAFFD919"
                android:text="@string/start_date"
                android:textAlignment="center"
                android:textColor="#000000" />

        </TableRow>

        <TableRow
            android:layout_width="137dp"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/sortSelector"
                android:layout_width="126dp"
                android:layout_height="match_parent"
                android:onClick="sortClicked">

                <RadioButton
                    android:id="@+id/rdoNewest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FF1744"
                    android:text="@string/newest"
                    android:textAlignment="center"
                    android:textColor="#F70303" />

                <RadioButton
                    android:id="@+id/rdoOldest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#651FFF"
                    android:text="@string/oldest"
                    android:textAlignment="center"
                    android:textColor="#651FFF" />

                <RadioButton
                    android:id="@+id/rdoRelevance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#2979FF"
                    android:text="@string/relevance"
                    android:textAlignment="center"
                    android:textColor="#2979FF" />

                <RadioButton
                    android:id="@+id/rdoNone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:checked="true"
                    android:text="@string/none"
                    android:textAlignment="center" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/startDay"
                        android:layout_width="match_parent"
                        android:layout_height="47dp"
                        android:ems="10"
                        android:hint="YearMonthDay"
                        android:inputType="date"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F01197"
                        android:text="END DATE"
                        android:textAlignment="center"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/endDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Example 20200129 "
                        android:inputType="date"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="10dp">

        </TableRow>
    </TableLayout>

</LinearLayout>